# Set up the build system
[build-system]

# Use latest setuotools, setuptools_scm for git versioning and
# numpy (numpy includes are needed for compilation of C extensions)
requires = ["setuptools>=64", "setuptools_scm>=8", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# Make a version file at build time
version_file = "src/h5forest/_version.py"

[project]
dynamic = ["version"]

name = "hdf5-forest"
description = "A tool to view HDF5 file structures in the terminal."
authors = [{name = "Will Roper", email = "w.roper@sussex.ac.uk"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
  "h5py",
  "numpy",
  "prompt_toolkit"
]

[project.urls]
"Homepage" = "https://github.com/WillJRoper/h5forest"
"Repository" = "https://github.com/WillJRoper/h5forest"

[project.scripts]
h5forest = "h5forest.h5_forest:main"
