# Set up the build system
[build-system]

# Use latest setuotools, setuptools_scm for git versioning and
# numpy (numpy includes are needed for compilation of C extensions)
requires = ["setuptools>=64", "setuptools_scm>=8", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# Make a version file at build time
version_file = "src/h5forest/_version.py"

[project]
dynamic = ["version"]

name = "h5forest"
description = "A tool to view HDF5 file structures in the terminal."
authors = [{name = "Will Roper", email = "w.roper@sussex.ac.uk"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
]

dependencies = [
  "h5py",
  "numpy",
  "prompt_toolkit",
  "matplotlib",
  "rapidfuzz>=3.0.0",
]

# Add special dependencies for development
[project.optional-dependencies]
dev = ["ruff", ]
test = [
  "pytest>=6.0",
  "pytest-cov>=2.0", 
  "pytest-mock>=3.0",
  "h5py",
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.0.0",
  "mkdocs-material[imaging]",
]

[project.urls]
"Homepage" = "https://github.com/WillJRoper/h5forest"
"Repository" = "https://github.com/WillJRoper/h5forest"
"Documentation" = "https://willjroper.github.io/h5forest/"

[project.scripts]
h5forest = "h5forest.h5_forest:main"

# Configure the linter and formatter
[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    ".DS_Store",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*__init__.py"  # ignore all init files
]

# PEP-8 line length
line-length = 79
indent-width = 4


# Assume Python 3.8 by default regardless
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and pycodestyle (`E`)  codes by default.
select = ["F", "E", "W"]
ignore = [
       "E402",  # "module level import not at top of file" (isolate C imports in case python alternatives exist)
       "F811",  # "redefinition of unused name from line N" (breaks quantity objects)
       ]

# Sort imports alphabetically
extend-select = ["I"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
